--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,20 +383,20 @@
     "        self.size = size\n",
     "        self.hash_count = hash_count\n",
     "        self.bit_array = [False] * size\n",
-    "        self.hash_seeds = self\n",
+    "        self.hash_seeds = self.generate_hash_seeds()\n",
     "\n",
-    "    def _generate_hash_seeds(self):\n",
+    "    def generate_hash_seeds(self):\n",
     "        # Generate a set of random hash seeds using a fixed seed value\n",
     "        # This ensures that the same set of seeds is used every time\n",
     "        hash_seeds = []\n",
-    "        random = random(42)\n",
+    "        rng = random.Random(42)\n",
     "        for i in range(self.hash_count):\n",
     "            hash_seeds.append(random.randint(0, 2**32-1))\n",
-    "        return hash_seeds\n",
+    "        return tuple(hash_seeds)\n",
     "\n",
-    "    def _hash_string(self, string, seed):\n",
-    "    # Compute a hash value for the given string using the given seed\n",
-    "    # This implementation uses the FNV-1a hash function\n",
+    "    def hash_string(self, string, seed):\n",
+    "        # Compute a hash value for the given string using the given seed\n",
+    "        # This implementation uses the FNV-1a hash function\n",
     "        fnv_offset_basis = 2166136261\n",
     "        fnv_prime = 16777619\n",
     "        hash_value = fnv_offset_basis ^ seed\n",
@@ -404,12 +404,12 @@
     "            hash_value = (hash_value ^ ord(char)) * fnv_prime\n",
     "        return hash_value\n",
     "\n",
-    "    def _get_hashes(self, element):\n",
-    "    # Generate a set of hash values for the given element\n",
-    "    # using the precomputed set of hash seeds\n",
+    "    def get_hashes(self, element):\n",
+    "        # Generate a set of hash values for the given element\n",
+    "        # using the precomputed set of hash seeds\n",
     "        hashes = []\n",
     "        for seed in self.hash_seeds:\n",
-    "            hash_value = self._hash_string(element, seed)\n",
+    "            hash_value = self.hash_string(element, seed)\n",
     "            hash_value = hash_value % self.size\n",
     "            hashes.append(hash_value)\n",
     "        return hashes\n",
@@ -417,16 +417,15 @@
     "    def insertElement(self, element):\n",
     "        inserted = False\n",
     "        # ADD YOUR CODE HERE\n",
-    "        for hash_value in self._get_hashes(element):\n",
+    "        for hash_value in self.get_hashes(element):\n",
     "            # Set the corresponding bit in the bit array to True\n",
     "            self.bit_array[hash_value] = True\n",
-    "        inserted = True\n",
     "        return inserted\n",
     "\n",
     "    def searchElement(self, element):\n",
     "        found = True\n",
     "        # ADD YOUR CODE HERE\n",
-    "        for hash_value in self._get_hashes(element):\n",
+    "        for hash_value in self.get_hashes(element):\n",
     "        # Check if the corresponding bit in the bit array is True\n",
     "            if not self.bit_array[hash_value]:\n",
     "                return False\n",
@@ -442,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,51 +477,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test1:\n",
-      "Sequential Search total insert time: 9.599107000045478 seconds\n",
-      "Sequential Search total search time: 0.26865049963817 seconds\n",
-      "Binary Search Tree total insert time: 0.4858300001360476 seconds\n",
-      "Binary Search Tree total search time: 0.00210379995405674 seconds\n",
-      "Balanced Search Tree total insert time: 0.5419491003267467 seconds\n",
-      "Balanced Search Tree total search time: 0.0012491000816226006 seconds\n",
-      "Bloom Filter total insert time: 1.908623999916017 seconds\n",
-      "Bloom Filter total search time: 0.004590800032019615 seconds\n",
-      "\n",
-      "\n",
-      "test2:\n",
-      "Sequential Search total insert time: 17.37725709984079 seconds\n",
-      "Sequential Search total search time: 0.27892439998686314 seconds\n",
-      "Binary Search Tree total insert time: 1.2462218003347516 seconds\n",
-      "Binary Search Tree total search time: 0.0015666000545024872 seconds\n",
-      "Balanced Search Tree total insert time: 1.1509781000204384 seconds\n",
-      "Balanced Search Tree total search time: 0.001165300142019987 seconds\n",
-      "Bloom Filter total insert time: 5.131281899753958 seconds\n",
-      "Bloom Filter total search time: 0.004646600224077702 seconds\n",
-      "\n",
-      "\n",
-      "test3:\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'testfiles\\\\\\\\test-search.txt'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 122\u001b[0m\n\u001b[0;32m    120\u001b[0m \u001b[39m# test3 Sequential Search =====================#\u001b[39;00m\n\u001b[0;32m    121\u001b[0m ss3 \u001b[39m=\u001b[39m SequentialSearchSet()\n\u001b[1;32m--> 122\u001b[0m ss3_insert_time_test3 \u001b[39m=\u001b[39m timeit\u001b[39m.\u001b[39;49mtimeit(\u001b[39m'\u001b[39;49m\u001b[39mtest_insert(ss3, test3_words_list)\u001b[39;49m\u001b[39m'\u001b[39;49m, number \u001b[39m=\u001b[39;49m \u001b[39m1\u001b[39;49m, \u001b[39mglobals\u001b[39;49m \u001b[39m=\u001b[39;49m \u001b[39mglobals\u001b[39;49m())\n\u001b[0;32m    123\u001b[0m ss_insert_time_data\u001b[39m.\u001b[39mappend(ss3_insert_time_test3)\n\u001b[0;32m    124\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mSequential Search total insert time: \u001b[39m\u001b[39m{\u001b[39;00mss3_insert_time_test3\u001b[39m}\u001b[39;00m\u001b[39m seconds\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\lihsi\\AppData\\Local\\Programs\\Python\\Python310\\lib\\timeit.py:234\u001b[0m, in \u001b[0;36mtimeit\u001b[1;34m(stmt, setup, timer, number, globals)\u001b[0m\n\u001b[0;32m    231\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtimeit\u001b[39m(stmt\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mpass\u001b[39m\u001b[39m\"\u001b[39m, setup\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mpass\u001b[39m\u001b[39m\"\u001b[39m, timer\u001b[39m=\u001b[39mdefault_timer,\n\u001b[0;32m    232\u001b[0m            number\u001b[39m=\u001b[39mdefault_number, \u001b[39mglobals\u001b[39m\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m    233\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Convenience function to create Timer object and call timeit method.\"\"\"\u001b[39;00m\n\u001b[1;32m--> 234\u001b[0m     \u001b[39mreturn\u001b[39;00m Timer(stmt, setup, timer, \u001b[39mglobals\u001b[39;49m)\u001b[39m.\u001b[39;49mtimeit(number)\n",
-      "File \u001b[1;32mc:\\Users\\lihsi\\AppData\\Local\\Programs\\Python\\Python310\\lib\\timeit.py:178\u001b[0m, in \u001b[0;36mTimer.timeit\u001b[1;34m(self, number)\u001b[0m\n\u001b[0;32m    176\u001b[0m gc\u001b[39m.\u001b[39mdisable()\n\u001b[0;32m    177\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 178\u001b[0m     timing \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49minner(it, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtimer)\n\u001b[0;32m    179\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m    180\u001b[0m     \u001b[39mif\u001b[39;00m gcold:\n",
-      "File \u001b[1;32m<timeit-src>:6\u001b[0m, in \u001b[0;36minner\u001b[1;34m(_it, _timer)\u001b[0m\n",
-      "Cell \u001b[1;32mIn[8], line 44\u001b[0m, in \u001b[0;36mtest_insert\u001b[1;34m(algorithms, words_list)\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtest_insert\u001b[39m(algorithms, words_list):\n\u001b[0;32m     43\u001b[0m     \u001b[39mfor\u001b[39;00m word \u001b[39min\u001b[39;00m words_list:\n\u001b[1;32m---> 44\u001b[0m         algorithms\u001b[39m.\u001b[39minsertElement(word)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# The following search_words_list stores words want to be searched during the experiment.\u001b[39;00m\n\u001b[1;32m      5\u001b[0m search_words_list \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtestfiles\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtest-search.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m search_file:\n\u001b[1;32m      7\u001b[0m     search_words_list \u001b[38;5;241m=\u001b[39m search_file\u001b[38;5;241m.\u001b[39mread()\u001b[38;5;241m.\u001b[39msplit()\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# The following test<index>_words_list stores words want to be inserted during the experiment.\u001b[39;00m\n",
+      "File \u001b[0;32m~/Library/Python/3.10/lib/python/site-packages/IPython/core/interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m     )\n\u001b[0;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'testfiles\\\\\\\\test-search.txt'"
      ]
     }
    ],
@@ -683,9 +650,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'module' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 25\u001b[0m\n\u001b[1;32m     23\u001b[0m bst \u001b[38;5;241m=\u001b[39m BinarySearchTreeSet()\n\u001b[1;32m     24\u001b[0m bal \u001b[38;5;241m=\u001b[39m BalancedSearchTreeSet()\n\u001b[0;32m---> 25\u001b[0m bf \u001b[38;5;241m=\u001b[39m \u001b[43mBloomFilterSet\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m# print(num_data)\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m num_data \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;66;03m# Sequential search\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[19], line 10\u001b[0m, in \u001b[0;36mBloomFilterSet.__init__\u001b[0;34m(self, size, hash_count)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhash_count \u001b[38;5;241m=\u001b[39m hash_count\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbit_array \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;01mFalse\u001b[39;00m] \u001b[38;5;241m*\u001b[39m size\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhash_seeds \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerate_hash_seeds\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[19], line 16\u001b[0m, in \u001b[0;36mBloomFilterSet.generate_hash_seeds\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgenerate_hash_seeds\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;66;03m# Generate a set of random hash seeds using a fixed seed value\u001b[39;00m\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;66;03m# This ensures that the same set of seeds is used every time\u001b[39;00m\n\u001b[1;32m     15\u001b[0m     hash_seeds \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m---> 16\u001b[0m     rng \u001b[38;5;241m=\u001b[39m \u001b[43mrandom\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m42\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhash_count):\n\u001b[1;32m     18\u001b[0m         hash_seeds\u001b[38;5;241m.\u001b[39mappend(random\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m32\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m))\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "import timeit\n",
     "\n",
