--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
     "        self.hash_seeds = self.generate_hash_seeds()\n",
     "\n",
     "    def generate_hash_seeds(self):\n",
-    "        # Generate a set of random hash seeds using a fixed seed value\n",
+    "        # Generate a set of random hash seeds using a fixed seed value [1]\n",
     "        # This ensures that the same set of seeds is used every time\n",
     "        hash_seeds = []\n",
     "        rng = random.Random(42)\n",
@@ -393,9 +393,10 @@
     "            hash_seeds.append(random.randint(0, 2**32-1))\n",
     "        return tuple(hash_seeds)\n",
     "\n",
+    "\n",
     "    def hash_string(self, string, seed):\n",
     "        # Compute a hash value for the given string using the given seed\n",
-    "        # This implementation uses the FNV-1a hash function\n",
+    "        # This implementation uses the FNV-1a hash function [2][3]\n",
     "        fnv_offset_basis = 2166136261\n",
     "        fnv_prime = 16777619\n",
     "        hash_value = fnv_offset_basis ^ seed\n",
@@ -405,7 +406,7 @@
     "\n",
     "    def get_hashes(self, element):\n",
     "        # Generate a set of hash values for the given element\n",
-    "        # using the precomputed set of hash seeds\n",
+    "        # using the precomputed set of hash seeds [4]\n",
     "        hashes = []\n",
     "        for seed in self.hash_seeds:\n",
     "            hash_value = self.hash_string(element, seed)\n",
@@ -2901,6 +2902,8 @@
    "source": [
     "import math\n",
     "\n",
+    "# Equations used to calculate the size and hash_count values based on the number\n",
+    "# of elements and the desired fasle positive rate [1]\n",
     "def calculate_bloom_filter_params(num_elements, false_pos_rate):\n",
     "    size = - (num_elements * math.log(false_pos_rate)) / (math.log(2)**2)\n",
     "    hash_count = (size / num_elements) * math.log(2)\n",
@@ -3032,6 +3035,19 @@
     "\n",
     "plt.legend(fontsize = 9)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "References:\n",
+    "\n",
+    "[1] https://en.wikipedia.org/wiki/Bloom_filter\n",
+    "[2] http://www.isthe.com/chongo/tech/comp/fnv/index.html\n",
+    "[3] https://en.wikipedia.org/wiki/Fowler%E2%80%93Noll%E2%80%93Vo_hash_function\n",
+    "[4] http://www.isthe.com/chongo/tech/comp/fnv/\n",
+    "[5]  "
    ]
   }
  ],
