Revert "Update SetMembership.ipynb"
This reverts commit d3b8ef11a89636c56f3af43fea74e82a1612fea3.

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -390,7 +390,7 @@
     "        hash_seeds = []\n",
     "        rng = random.Random(42)\n",
     "        for i in range(self.hash_count):\n",
-    "            hash_seeds.append(rng.randint(0, 2**32-1))\n",
+    "            hash_seeds.append(random.randint(0, 2**32-1))\n",
     "        return tuple(hash_seeds)\n",
     "\n",
     "\n",
