Update SetMembership.ipynb add worst case list

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -147,7 +147,7 @@
     "        if time_taken > longest_time_taken:\n",
     "            longest_time_taken = time_taken\n",
     "    return longest_time_taken\n",
-    "# balanced search tree\n",
+    "# for balanced search tree\n",
     "def test_search_one_element_for_bal_Synthetic_Test(words_list):\n",
     "    longest_time_taken =0\n",
     "    for word in words_list:\n",
